<resources>
    <string name="app_name">Finance</string>
    <!-- Login -->
    <string name="fazer_login">Realizar login</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="fazer_cadastro">Registrar-se</string>
    <!-- Criar Conta -->
    <string name="cadastro">Criar Conta</string>
    <string name="nome">Nome</string>
    <string name="confirma_senha">Confirmar Senha</string>
    <string name="registrar">Registrar</string>
    <string name="foto_perfil">Foto de Perfil</string>
    <string name="selecionar_foto">Selecione uma foto</string>
    <!-- Bottom navigation   -->
    <string name="title_activity_home">Tela Principal</string>
    <string name="title_home">Home</string>
    <string name="title_transacoes">Transacoes</string>
    <string name="title_contas">Contas</string>
    <string name="title_limites">Limites</string>
    <string name="title_categorias">Categorias</string>
    <string name="update">Atualizar</string>
    <string name="delete">Apagar</string>
    <string name="back">Voltar</string>
    <string name="save">Salvar</string>
    <string name="ok">Confirmar</string>
    <!-- Home -->
    <string name="welcome">Seja bem-vindo ao Finance</string>
    <string name="usuario">Nome</string>
    <string name="logout">Logout</string>
    <string name="update_usuario">Atualizar Cadastro</string>
    <!-- Transacoes -->
    <!-- Contas -->
    <string name="addConta">Adicionar Conta</string>
    <string name="nomeBanco">Nome do Banco</string>
    <string name="saldoBanco">Saldo</string>
    <!-- Limites -->
    <!-- Categorias -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>