<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.finance.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_transacoes"
        android:name="com.example.finance.view.transacoes.TransacoesFragment"
        android:label="@string/title_transacoes"
        tools:layout="@layout/fragment_transacoes" />

    <fragment
        android:id="@+id/navigation_contas"
        android:name="com.example.finance.view.contas.ContasFragment"
        android:label="@string/title_contas"
        tools:layout="@layout/fragment_contas" />

    <fragment
        android:id="@+id/navigation_limites"
        android:name="com.example.finance.view.limites.LimitesFragment"
        android:label="@string/title_limites"
        tools:layout="@layout/fragment_limites" />
</navigation>